Add some additional files to native image config
Looks like LWJGL is using FFI now